@@ -1,5 +1,8 @@
 Revision history for DBIx::Class
 
+        - InflateColumn::DateTime support for MSSQL via DBD::Sybase
+        - millisecond precision support for MSSQL datetimes for
+          InflateColumn::DateTime
         - support connecting using $ENV{DBI_DSN} and $ENV{DBI_DRIVER}
         - current_source_alias method on ResultSet objects to
           determine the alias to use in programatically assembled
